tests/error_corpus/validation_errors/E502_missing_end_header.cha
@UTF8
@Begin
@Languages:	eng
@Participants:	CHI Child
@ID:	eng|corpus|CHI|||||Child|||
@Comment:	ERROR: Missing @End header
*CHI:	hello world .
