tests/error_corpus/parse_errors/E312_unclosed_bracket.cha
@Begin
@Languages:	eng
@Participants:	CHI Child
@ID:	eng|corpus|CHI|||||Child|||
@Comment:	ERROR: Bracket must be closed
@Comment:	Invalid: 'hello [: world' - Missing ]
*CHI:	hello [: world .
@End
